# 21sh

./: .Makefile.swp  .gitignore  21sh  CMakeLists.txt  Makefile  auteur
21sh/: Makefile
21sh.dSYM/Contents/Resources/DWARF/: 21sh
21sh/srcs/: main.c
21sh/srcs/env/: get_env_val.c
21sh/srcs/reader/: insert_buffer.c  read_raw_mode.c
21sh/srcs/terminal/: display_prompt.c  init_terminal.c
includes/: .shell.h.swp  builtin.h  env.h  history.h  lexer.h  reader.h  readline.h  rl_defines.h  rl_typedefs.h  sh_defines.h  shell.h  twenty_one_sh.h
libft/: Makefile
libft/includes/: libft.h
libft/srcs/array/: ft_arrdel.c  ft_arrdup.c
libft/srcs/array-utf8-string/: ft_u8_arrdel.c  ft_u8_arrdup.c  ft_u8_arrlen.c
libft/srcs/gnl/: get_next_line.c
libft/srcs/memory/: ft_memalloc.c
libft/srcs/output/: ft_putu8str.c
libft/srcs/string/: ft_strfreejoin.c
libft/srcs/utf8-string/: ft_u8_strcat.c  ft_u8_strcmp.c  ft_u8_strcpy.c  ft_u8_strdel.c  ft_u8_strdup.c  ft_u8_strequ.c  ft_u8_strncat.c  ft_u8_strncmp.c  ft_u8_strncpy.c
srcs/: main.c
srcs/builtin/: built_cd.c  built_echo.c  built_env.c  built_env_extra.c  built_exclaim.c  built_history.c  built_setenv.c  built_unsetenv.c
srcs/cleaner/: fatal_exit.c  free_term.c
srcs/env/: addlast_env_lst.c  addlast_envl.c  envarr_2_envl.c  envarr_2_envlst.c  get_env_val.c  init_shell_envl.c  push_env.c
srcs/history/: .push_histori.c.swp  controler_history.c  down_history.c  file_history.c  history_cmd.c  init_shell_history.c  list_history.c  up_history.c
srcs/lexer/: lexer.c
srcs/reader/: increase_buffer.c  insert_buffer.c  read_raw_mode.c  read_raw_mode2.c  read_raw_mode3.c  read_raw_mode4.c  termcaps.c
srcs/readline/: readline.c  rl_buffer.c  rl_delete_ctrl.c  rl_moving_ctrl.c  rl_moving_esc.c  rl_prompt.c  rl_termcaps.c
srcs/signal/: ft_signal.c
srcs/terminal/: display_prompt.c  free_term.c  init_shell.c  init_terminal.c  run_shell.c  shell.c  singleton_shell.c  terminal.c
