cmake_minimum_required(VERSION 3.13)
project(21sh C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

set(SOURCE includes/env.h
        includes/reader.h
        includes/readline.h
        includes/rl_defines.h
        includes/rl_typedefs.h
        includes/sh_defines.h
        includes/sh_typedefs.h
        includes/shell.h
        includes/twenty_one_sh.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/srcs/array/ft_arrdel.c
        libft/srcs/array/ft_arrdup.c
        libft/srcs/array/ft_arrlen.c
        libft/srcs/conversion/ft_atoi.c
        libft/srcs/conversion/ft_itoa.c
        libft/srcs/conversion/ft_tolower.c
        libft/srcs/conversion/ft_toupper.c
        libft/srcs/gnl/get_next_line.c
        libft/srcs/list/ft_lstadd.c
        libft/srcs/list/ft_lstaddlast.c
        libft/srcs/list/ft_lstdel.c
        libft/srcs/list/ft_lstdelone.c
        libft/srcs/list/ft_lstiter.c
        libft/srcs/list/ft_lstlen.c
        libft/srcs/list/ft_lstmap.c
        libft/srcs/list/ft_lstnew.c
        libft/srcs/maths/ft_abs.c
        libft/srcs/maths/ft_max.c
        libft/srcs/maths/ft_min.c
        libft/srcs/memory/ft_bzero.c
        libft/srcs/memory/ft_memalloc.c
        libft/srcs/memory/ft_memccpy.c
        libft/srcs/memory/ft_memchr.c
        libft/srcs/memory/ft_memcmp.c
        libft/srcs/memory/ft_memcpy.c
        libft/srcs/memory/ft_memdel.c
        libft/srcs/memory/ft_memmove.c
        libft/srcs/memory/ft_memset.c
        libft/srcs/output/ft_putchar.c
        libft/srcs/output/ft_putchar_fd.c
        libft/srcs/output/ft_putendl.c
        libft/srcs/output/ft_putendl_fd.c
        libft/srcs/output/ft_putnbr.c
        libft/srcs/output/ft_putnbr_fd.c
        libft/srcs/output/ft_putnbrendl.c
        libft/srcs/output/ft_putnbrendl_fd.c
        libft/srcs/output/ft_putstr.c
        libft/srcs/output/ft_putstr_fd.c
        libft/srcs/string/ft_strcat.c
        libft/srcs/string/ft_strchr.c
        libft/srcs/string/ft_strclr.c
        libft/srcs/string/ft_strcmp.c
        libft/srcs/string/ft_strcpy.c
        libft/srcs/string/ft_strdel.c
        libft/srcs/string/ft_strdup.c
        libft/srcs/string/ft_strequ.c
        libft/srcs/string/ft_strfjoin.c
        libft/srcs/string/ft_striter.c
        libft/srcs/string/ft_striteri.c
        libft/srcs/string/ft_strjoin.c
        libft/srcs/string/ft_strjoinjoin.c
        libft/srcs/string/ft_strlcat.c
        libft/srcs/string/ft_strlen.c
        libft/srcs/string/ft_strmap.c
        libft/srcs/string/ft_strmapi.c
        libft/srcs/string/ft_strncat.c
        libft/srcs/string/ft_strncmp.c
        libft/srcs/string/ft_strncpy.c
        libft/srcs/string/ft_strnequ.c
        libft/srcs/string/ft_strnew.c
        libft/srcs/string/ft_strnstr.c
        libft/srcs/string/ft_strrchr.c
        libft/srcs/string/ft_strsplit.c
        libft/srcs/string/ft_strstr.c
        libft/srcs/string/ft_strsub.c
        libft/srcs/string/ft_strtrim.c
        libft/srcs/type/ft_isnotprint.c
        libft/srcs/type/ft_isalnum.c
        libft/srcs/type/ft_isalpha.c
        libft/srcs/type/ft_isascii.c
        libft/srcs/type/ft_isdigit.c
        libft/srcs/type/ft_isescaped.c
        libft/srcs/type/ft_islower.c
        libft/srcs/type/ft_isprint.c
        libft/srcs/type/ft_isquote.c
        libft/srcs/type/ft_isupper.c
        libft/srcs/type/ft_strtolower.c
        srcs/cleaner/fatal_exit.c
        srcs/cleaner/free_term.c
        srcs/env/addlast_envl.c
        srcs/env/envarr_2_envl.c
        srcs/env/get_env_val.c
        srcs/env/push_env.c
        srcs/readline/readline.c
        srcs/readline/rl_buffer.c
        srcs/readline/rl_copy.c
        srcs/readline/rl_cut.c
        srcs/readline/rl_moving_ctrl.c
        srcs/readline/rl_moving_esc.c
        srcs/readline/rl_paste.c
        srcs/readline/rl_prompt.c
        srcs/readline/rl_termcaps.c
        srcs/readline/rl_undo.c
        srcs/readline/rl_delete_ctrl.c
        srcs/signal/ft_signal.c
        srcs/terminal/display_prompt.c
        srcs/terminal/init_shell.c
        srcs/terminal/init_terminal.c
        srcs/terminal/run_shell.c
        srcs/terminal/singleton_shell.c
        srcs/main.c libft/srcs/type/ft_first_char_unicode.c srcs/readline/rl_delete_ctrl.c)

add_executable(21sh ${SOURCE})
target_link_libraries(21sh termcap)